[tool.poetry]
name = "unittests"
version = "0.1.0"
description = "Python Unit Tests"
authors = ["AG"]
license = "Beerware"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
pytest = "7.2.2"
requests = "2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
